# sqyyy-bot

./: Cargo.toml  todo.md
src/: git.rs  main.rs  parser.rs
src/commands/: emulate.rs  lexicon.rs  mod.rs  test.rs
